# whisper-timestamped

./: .gitignore  pyproject.toml
.cursor/plans/: gpu_cuda_process_recordings_2a535a05.plan.md  process_recordings_performance_diagnosis_f9d8b1a5.plan.md  robust_process_recordings_per-file_d5e7519e.plan.md
.github/workflows/: docker-image.yml
scripts/: process_recordings.py  transcript_to_lsl.py
whisper_timestamped/: watcher.py
whisper_timestamped/mixins/: live_whisper_transcription.py
