[project]
name = "whisper-timestamped"
version = "0.2.5"
description = "Multi-lingual Automatic Speech Recognition (ASR) based on Whisper models, with accurate word timestamps, access to language detection confidence, several options for Voice Activity Detection (VAD), and more."
readme = "README.md"
requires-python = ">=3.10,<3.11"
license = {text = "MIT"}
authors = [
    {name = "Jeronymous"},
]
urls = {Homepage = "https://github.com/CommanderPho/whisper-timestamped"}
dependencies = [
    "attrs>=22.2.0,<23",
    "auditok>=0.3.0",
    "cython",
    "dtw-python",
    "faster-whisper>=1.2.0",
    "huggingface-hub[hf-xet]>=0.33.4",
    "ipykernel>=6.30.0",
    "keyboard>=0.13.5",
    "mne>=1.10.0",
    "mne-lsl>=1.10.1",
    "numpy>=2.2.6",
    "onnxruntime>=1.22.1,<1.23; platform_system != 'Darwin' or platform_machine != 'x86_64'",
    "onnxruntime>=1.16.1,<1.20.0; platform_system == 'Darwin' and platform_machine == 'x86_64'",
    "openai-whisper",
    "pandas>=2.3.1",
    "phopylslhelper",
    "pyautogui>=0.9.54",
    "pyinstaller>=6.15.0",
    "pylsl>=1.17.6",
    "pystray>=0.19.5",
    "pyxdf>=1.17.0",
    "realtimestt>=0.1.7",
    "scipy>=1.15.3",
    "setuptools>=80.9.0,<81",
    "silero-vad>=6.0.0",
    "torch>=2.9.1",
    "torchvision>=0.24.1",
    "torchaudio>=2.9.1,<3.0.0",
    # "torch>=2.7.1; platform_system != 'Darwin' or platform_machine != 'x86_64'",
    # "torch>=2.0.0,<2.1.0; platform_system == 'Darwin' and platform_machine == 'x86_64'",
    # "torchaudio>=2.7.1; platform_system != 'Darwin' or platform_machine != 'x86_64'",
    # "torchaudio>=2.0.0,<2.1.0; platform_system == 'Darwin' and platform_machine == 'x86_64'",
    # "torchvision>=0.22.1; platform_system != 'Darwin' or platform_machine != 'x86_64'",
    # "torchvision>=0.15.0,<0.16.0; platform_system == 'Darwin' and platform_machine == 'x86_64'",
    "transformers>=4.53.2",
    "wheel>=0.45.1",
]

[project.optional-dependencies]
dev = [
    "matplotlib>=3.10.3",
    "transformers>=4.53.2",
]
live = [
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
]
watch = [
    "watchdog>=4.0.0",
]
vad_silero = [
    "onnxruntime>=1.22.1,<1.23; platform_system != 'Darwin' or platform_machine != 'x86_64'",
    "onnxruntime>=1.16.1,<1.20.0; platform_system == 'Darwin' and platform_machine == 'x86_64'",
    "torchaudio>=2.9.1,<3.0.0",
    # "torchaudio>=2.7.1; platform_system != 'Darwin' or platform_machine != 'x86_64'",
    # "torchaudio>=2.0.0,<2.1.0; platform_system == 'Darwin' and platform_machine == 'x86_64'",
]
vad_auditok = [
    "auditok",
]
test = [
    "jsonschema",
]
# Updated extras that match your current dependencies
full = [
    "matplotlib>=3.10.3",
    "onnxruntime>=1.22.1,<1.23; platform_system != 'Darwin' or platform_machine != 'x86_64'",
    "onnxruntime>=1.16.1,<1.20.0; platform_system == 'Darwin' and platform_machine == 'x86_64'",
    "torchaudio>=2.9.1,<3.0.0",
    # "torchaudio>=2.7.1; platform_system != 'Darwin' or platform_machine != 'x86_64'",
    # "torchaudio>=2.0.0,<2.1.0; platform_system == 'Darwin' and platform_machine == 'x86_64'",
    "transformers>=4.53.2",
    "faster-whisper>=1.0.0",
    "sounddevice>=0.4.6",
    "soundfile>=0.12.1",
    "watchdog>=4.0.0",
]

[project.scripts]
whisper_timestamped = "whisper_timestamped.transcribe:cli"
whisper_timestamped_make_subtitles = "whisper_timestamped.make_subtitles:cli"
whisper_timestamped_live = "whisper_timestamped.live:cli"
whisper_timestamped_watch = "whisper_timestamped.watcher:cli"

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.setuptools.package-data]
"*" = ["*"]

[tool.uv]
package = true

[tool.uv.sources]
openai-whisper = { git = "https://github.com/openai/whisper.git" }
phopylslhelper = { path = "../PhoPyLSLhelper", editable = true }
torch = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchvision = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]
torchaudio = [
  { index = "pytorch-cu130", marker = "sys_platform == 'linux' or sys_platform == 'win32'" },
]


[[tool.uv.index]]
name = "pytorch-cu130"
url = "https://download.pytorch.org/whl/cu130"
explicit = true

[[tool.uv.index]]
name = "pytorch-cpu"
url = "https://download.pytorch.org/whl/cpu"
explicit = true

